// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.AutoComplete default 1`] = `
<div
  class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-autocomplete"
>
  <span
    class="arco-input-group"
  >
    <span
      class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
    >
      <input
        class="arco-input arco-input-size-default"
        tabindex="0"
        value=""
      />
      <span
        class="arco-input-group-suffix"
      >
        <i />
      </span>
    </span>
  </span>
</div>
`;

exports[`ConfigProvider componentConfig.AutoComplete set className globally 1`] = `
<div
  class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-autocomplete global-default-class"
>
  <span
    class="arco-input-group"
  >
    <span
      class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
    >
      <input
        class="arco-input arco-input-size-default"
        tabindex="0"
        value=""
      />
      <span
        class="arco-input-group-suffix"
      >
        <i />
      </span>
    </span>
  </span>
</div>
`;

exports[`ConfigProvider componentConfig.AutoComplete set className globally and component set className itself. 1`] = `
<div
  class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-autocomplete component-class"
>
  <span
    class="arco-input-group"
  >
    <span
      class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
    >
      <input
        class="arco-input arco-input-size-default"
        tabindex="0"
        value=""
      />
      <span
        class="arco-input-group-suffix"
      >
        <i />
      </span>
    </span>
  </span>
</div>
`;

exports[`ConfigProvider componentConfig.AutoComplete set data-* property 1`] = `
<div
  class="arco-input-group-wrapper arco-input-group-wrapper-default arco-input-has-suffix arco-autocomplete"
>
  <span
    class="arco-input-group"
  >
    <span
      class="arco-input-inner-wrapper arco-input-inner-wrapper-default"
    >
      <input
        class="arco-input arco-input-size-default"
        data-test-name="AutoComplete"
        tabindex="0"
        value=""
      />
      <span
        class="arco-input-group-suffix"
      >
        <i />
      </span>
    </span>
  </span>
</div>
`;
